; ModuleID = '/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_close.c__zip_torrentzip_cmp.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/zip/zip/extr_zip_close.c__zip_torrentzip_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zip_filelist = type { i8* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @_zip_torrentzip_cmp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_zip_torrentzip_cmp(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.zip_filelist*
  %10 = getelementptr inbounds %struct.zip_filelist, %struct.zip_filelist* %9, i32 0, i32 0
  %11 = load i8*, i8** %10, align 8
  store i8* %11, i8** %6, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = bitcast i8* %12 to %struct.zip_filelist*
  %14 = getelementptr inbounds %struct.zip_filelist, %struct.zip_filelist* %13, i32 0, i32 0
  %15 = load i8*, i8** %14, align 8
  store i8* %15, i8** %7, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = icmp eq i8* %16, null
  br i1 %17, label %18, label %23

18:                                               ; preds = %2
  %19 = load i8*, i8** %7, align 8
  %20 = icmp ne i8* %19, null
  %21 = zext i1 %20 to i32
  %22 = mul nsw i32 %21, -1
  store i32 %22, i32* %3, align 4
  br label %32

23:                                               ; preds = %2
  %24 = load i8*, i8** %7, align 8
  %25 = icmp eq i8* %24, null
  br i1 %25, label %26, label %27

26:                                               ; preds = %23
  store i32 1, i32* %3, align 4
  br label %32

27:                                               ; preds = %23
  br label %28

28:                                               ; preds = %27
  %29 = load i8*, i8** %6, align 8
  %30 = load i8*, i8** %7, align 8
  %31 = call i32 @__strcasecmp(i8* %29, i8* %30)
  store i32 %31, i32* %3, align 4
  br label %32

32:                                               ; preds = %28, %26, %18
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i32 @__strcasecmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
